Add lightgray background

--- a/001-JavaScript.solved.html
+++ b/001-JavaScript.solved.html
@@ -1,10 +1,9 @@
 <html>
   <head></head>
-  <body style="padding: 40px;">
+  <body style="padding: 40px; background-color: lightgray;">
     <input id="x" oninput="add()"/>
     <span>+</span>
     <input id="y" oninput="add()"/>
-    <button onclick="add()">=</button>
     <span>=</span>
     <input id="result"/>
 
