--- a/001-Todos.solved.html
+++ b/001-Todos.solved.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
-  <body style="padding: 40px;">
+  <body style="padding: 40px; background-color: lightgray;">
     <input id="new-todo"/>
     <button onclick="addNewTodo()">Add</button>
     <ul id="todos-list"></ul>
