--- a/001-Todos.html
+++ b/001-Todos.html
@@ -1,5 +1,5 @@
 <html>
   <head></head>
-  <body style="padding: 40px;">
+  <body style="padding: 40px; background-color: lightgray;">
   </body>
 </html>
